--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -182,7 +182,7 @@
 <!-- End 遊戲畫面 -->
 <!-- 遊戲相關js -->
 @section Scripts{
-    @* <script src="~/js/game/DBIformation.js"></script>*@
+    <script src="~/js/game/DBIformation.js"></script>
     <script src="~/js/game/Main.js"></script>
     <script src="~/js/game/function.js"></script>
     <script src="~/js/game/button.js"></script>
