--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Product/Product.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Product/Product.cshtml
@@ -133,7 +133,7 @@
                             <input type="file" class="form-control" id="CreateImage" name="ShopProductImageTable">
                         </div>
 
-                        <button id="CreateProduct" class="btn btn-danger btn-block"
+                        <button id="CreateProduct" name="CreateProduct" class="btn btn-danger btn-block"
                                 style="width: 100%;">
                             儲存
                         </button>
@@ -271,7 +271,7 @@
                                                 <input type="file" class="form-control" id="editor-image" name="ShopProductImageTable">
                                             </div>
 
-                                            <button type="submit" class="mt-3 btn btn-primary btn-block" name="submitButton-edior"
+                                            <button type="submit" class="mt-3 btn btn-primary btn-block" name="submitButton-edior" id="submitButton-edior"
                                                     style="width: 100%;">
                                                 儲存
                                             </button>
@@ -491,20 +491,20 @@
             });
 
             //新增商品================================================
-            $('#CreatMember').click(function () {
+            $('#CreateProduct').click(function () {
 
-                var id = $('#CreateID').val
-                var name = $('#CreateName').val
-                var description = $('#CreateDescription').val
-                var price = $('#CreatePrice').val
-                var remainingquantity = $('#Createremainingquantity').val
-                var category = $('#Createcategory').val
-                var releasedate = $('#Createreleasedate').val
-                var size = $('#Createsize').val
-                var weight = $('#Createweight').val
-                var supplier = $('#Createsupplier').val
-                var discontinued = $('#Creatediscontinued').val
-                var image = $('#Createimage').val
+                var id = $('#CreateID').val();
+                var name = $('#CreateName').val();
+                var description = $('#CreateDescription').val();
+                var price = $('#CreatePrice').val();
+                var remainingquantity = $('#Createremainingquantity').val();
+                var category = $('#Createcategory').val();
+                var releasedate = $('#Createreleasedate').val();
+                var size = $('#Createsize').val();
+                var weight = $('#Createweight').val();
+                var supplier = $('#Createsupplier').val();
+                var discontinued = $('#Creatediscontinued').val();
+                var image = $('#Createimage').val();
 
                 // 檢查必填欄位是否有值
                 if (!id || !name || !description || !price || !remainingquantity || !category || !releasedate || !size || !weight || !supplier || !discontinued || !image) {
