--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/CMSHome/Login.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/CMSHome/Login.cshtml
@@ -21,52 +21,54 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&display=swap" rel="stylesheet">
 
     <title>後台登入頁-貓抓抓</title>
+
+    <style>
+        /*密碼眼睛位置*/
+        .password-container {
+            position: relative;
+        }
+
+        .toggle-password {
+            position: absolute;
+            top: 50%;
+            right: 10px; /* 調整此值以控制圖標與輸入框的距離 */
+            transform: translateY(-50%);
+            cursor: pointer;
+        }
+    </style>
 </head>
 
-@using (Html.BeginForm())
-{
-    <body>
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-10 col-xl-8 col-lg-9 col-md-8 col-sm-10">
-                    <div class="card border-0" style="box-shadow: 0 1rem 3rem rgba(0, 0, 0, .175) !important;overflow: hidden;margin: 15rem 0 15rem 0;">
-                        <div class="card-body p-0">
-                            <div class="row">
-                                <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-                                <div class="col-lg-6">
-                                    <div class="login-right-card p-3 m-5">
-                                        <div class="text-center">
-                                            <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
-                                        </div>
+<body>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-10 col-xl-8 col-lg-9 col-md-8 col-sm-10">
+                <div class="card border-0" style="box-shadow: 0 1rem 3rem rgba(0, 0, 0, .175) !important;overflow: hidden;margin: 15rem 0 15rem 0;">
+                    <div class="card-body p-0">
+                        <div class="row">
+                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                            <div class="col-lg-6">
+                                <div class="login-right-card p-3 m-5">
+                                    <div class="text-center">
+                                        <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                                    </div>
+                                    <form id="loginForm" method="post" action="/AdminCMS/CMSHome/Login">
                                         <div class="user">
                                             <div class="form-group mb-4">
-                                                <input type="text" name="AdminAccount" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="帳號" style="border-radius: 30px;">
+                                                <input type="text" name="AdminAccount" class="form-control form-control-user" id="InputEmail" aria-describedby="emailHelp" placeholder="帳號" style="border-radius: 30px;">
                                             </div>
-                                            @*                                            <div class="form-group mb-4">
-                                        帳號
-                                        <div class="col-md-10">
-                                        @Html.TextBox("AdminAccount", "", new { htmlAttributes = new { @class = "form-control form-control-user" } })
-                                        </div>
-                                        </div>*@
                                             <div class="form-group mb-4">
-                                                <input type="password" name="AdminPassword" class="form-control form-control-user" id="exampleInputPassword" placeholder="密碼" style="border-radius: 30px;">
+                                                <div class="password-container">
+                                                    <input type="password" name="AdminPassword" class="form-control form-control-user" id="InputPassword" value="catcha123" placeholder="密碼" style="border-radius: 30px;">
+                                                    <span id="togglePassword" class="toggle-password"><i class="fas fa-eye"></i></span>
+                                                </div>
                                             </div>
-                                            @*                                            <div class="form-group mb-4">
-                                        密碼
-                                        <div class="col-md-10">
-                                        @Html.TextBox("AdminPassword", "", new { htmlAttributes = new { @class = "form-control  form-control-user" } })
-                                        </div>
-                                        </div>*@
-                                            @*                                            <a href="javascript:;" class="btn btn-primary btn-user btn-block"
-                                        style="width: 100%;border-radius: 30px;">
-                                        登入
-                                        </a>*@
-                                            <button type="submit" class="btn btn-primary btn-user btn-block"
+                                            <button type="submit" id="loginButton" class="btn btn-primary btn-user btn-block"
                                                     style="width: 100%;border-radius: 30px;">
                                                 登入
                                             </button>
+                                            <span id="duplicateMessage" style="display:none;color:red;"> </span>
                                         </div>
-                                    </div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -74,5 +76,128 @@
                 </div>
             </div>
         </div>
-    </body>
-}
+    </div>
+</body>
+
+<script src="~/js/jquery-3.2.1.min.js"></script>
+
+<script>
+    $(document).ready(function () {
+
+        //==============密碼眼睛
+        $('#togglePassword').click(function () {
+            if ($('#InputPassword').attr('type') === 'password') {
+                $('#InputPassword').attr('type', 'text');
+            } else {
+                $('#InputPassword').attr('type', 'password');
+            }
+        });
+
+        document.getElementById("loginForm").addEventListener("submit", function (event) {
+            var username = document.getElementById("InputEmail").value;
+            var password = document.getElementById("InputPassword").value;
+
+            if (username.trim() === "" || password.trim() === "") {
+                event.preventDefault(); // Prevent the form from submitting
+                alert("Username and password cannot be empty!");
+            }
+        });
+
+
+        $("#loginForm").submit(function (event) {
+            event.preventDefault(); // 阻止表单默认提交行为
+
+            var account = $('InputEmail').val();
+            var password = $('InputPassword').val();
+
+            $.ajax({
+                type: "POST",
+                url: "/AdminCMS/CMSHome/CheckAdminLogin", // 你的后端验证方法的URL
+                data: { account: account, password: password },
+                success: function (response) {
+                    console.log(response.isDuplicate)
+
+                    if (response.isDuplicate) { //如果等於true
+                        $("#loginForm")[0].submit(); // 手动触发表单提交
+                    } else {
+                        // 执行登录操作或其他操作
+
+                        $('#duplicateMessage').text("帳號或密碼錯誤");
+                        $('#duplicateMessage').css("display", "block"); //顯示錯誤訊息
+                    }
+                },
+                error: function (xhr, status, error) {
+                    console.error(error);
+                }
+            });
+        });
+    });
+
+
+
+            //$('loginButton').click(function() {
+            //    var account = $('InputEmail').val();
+            //    var password = $('InputPassword').val();
+            //    //====================打API驗證是否有此會員帳號
+            //    $.ajax({
+            //        url: '/AdminCMS/CMSHome/CheckAdminLogin',
+            //        type: 'GET',
+            //        data:
+            //        {
+            //            account: account,
+            //            password: password
+            //        },
+            //        success: function (result) {
+            //            console.log(result)
+            //            CheckAccResult = result.isDuplicate;
+
+            //            if (result.isDuplicate) { //如果等於true
+            //                CheckAccResult = result.isDuplicate;
+            //                $('#duplicateMessage').text("此帳號已存在");
+            //                $('#duplicateMessage').css("display", "block"); //顯示錯誤訊息
+
+            //            } else {
+            //                CheckAccResult = result.isDuplicate;
+            //                $('#duplicateMessage').text("");
+            //                $('#duplicateMessage').css("display", "none"); //顯示錯誤訊息
+            //            }
+            //        },
+            //        error: function (error) {
+            //            console.error(error);
+            //        }
+            //    });
+            //})
+
+
+                    //$(document).ready(function () {
+                    //    $("#loginButton").click(function () {
+                    //        var adminAccount = $("#InputEmail").val();
+                    //        var adminPassword = $("#InputPassword").val();
+
+                    //        if (adminAccount === '' || adminPassword === '') {
+                    //            $("#errorMessage").text("帳號和密碼不得為空");
+                    //            return;
+                    //        }
+
+                    //        $.ajax({
+                    //            url: "@Url.Action("Login", "CMSHome")",
+                    //            type: "POST",
+                    //            data: {
+                    //                AdminAccount: adminAccount,
+                    //                AdminPassword: adminPassword
+                    //            },
+                    //            success: function (result) {
+                    //            if (!result.Success) {
+                    //                $("#errorMessage").text("帐号或密码错误");
+                    //            }
+                    //            @*else {*@
+                    //                @*$("#errorMessage").text("帐号或密码错误");*@
+                    //            @*}*@
+                    //        },
+                    //        error: function () {
+                    //            $("#errorMessage").text("发生错误，请重试");
+                    //        }
+                    //        });
+                    //    });
+                    //});
+</script>
