--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
@@ -28,9 +28,9 @@
         </div>
         <!--增加:End當前分類-->
         <div class="row">
-
-            @foreach (var item in Model.DistinctBy(item=>item.product.ProductCategoryId))
-            {
+            
+            @* @foreach (var item in Model.DistinctBy(item => item.product.ProductCategory.CategoryName))
+                {
                 <div class="col-md-2 col-4">
                     <div class="shop-cat-boxs">
                         <a href="#">
@@ -39,7 +39,9 @@
                         </a>
                     </div>
                 </div>
-            }
+                } *@
+            
+            
         </div>
     </div>
 </div>
@@ -86,11 +88,11 @@
                         <div class="filter">
                             <span>顯示</span>
                             <div class="shop-filter-select">
-                                <select class="form-select" aria-label="顯示多少筆數">
-                                    <option value="1" selected>10</option>
-                                    <option value="2">20</option>
-                                    <option value="3">30</option>
-                                    <option value="4">40</option>
+                                <select id="itemPerPageSelect" class="form-select" aria-label="顯示多少筆數">
+                                    <option value="10" selected>10</option>
+                                    <option value="20">20</option>
+                                    <option value="30">30</option>
+                                    <option value="40">40</option>
                                 </select>
                             </div>
                             <span>筆</span>
@@ -107,7 +109,7 @@
                             </div>
                             <!-- end 商品圖示 -->
                             <div class="text-center ">
-                                <button class="btn-custom btn hvr-hover">
+                                <button id="showMore" class="btn-custom btn hvr-hover">
                                     顯示更多<i class="fas fa-angle-down"></i>
                                 </button>
                             </div>
@@ -137,6 +139,6 @@
     <script src="~/js/form-validator.min.js"></script>
     <script src="~/js/contact-form-script.js"></script>
     @* <script src="~/js/custom.js"></script> *@
-    <link href="~/css/custom-home-details-wishlist.css" rel="stylesheet" />
+    <script src="~/js/custom-home-details-wishlist.js"></script>
 }
 
